--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,10 @@
   "description": "Pryecto en express que consume la api de graphql de rick and morty.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +32,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.12",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "type-graphql": "^2.0.0-beta.2"
